public-node/public-node-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: public-node-ingress
  namespace: public-node
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mainnet.ckbapp.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-mainnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /rpc
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-mainnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /indexer
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-mainnet-ckb-svc
                port:
                  number: 8114
    - host: testnet.ckbapp.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-testnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /rpc
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-testnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /indexer
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-testnet-ckb-svc
                port:
                  number: 8114
    - host: mainnet.ckb.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-mainnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /rpc
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-mainnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /indexer
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-mainnet-ckb-svc
                port:
                  number: 8114
    - host: lina.ckb.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-mainnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /rpc
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-mainnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /indexer
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-mainnet-ckb-svc
                port:
                  number: 8114
    - host: testnet.ckb.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-testnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /rpc
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-testnet-ckb-nginx-svc
                port:
                  number: 80
          - path: /indexer
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-testnet-ckb-svc
                port:
                  number: 8114
